--- a/BolindersBil.Web/Views/VehicleForSale/Index.cshtml
+++ b/BolindersBil.Web/Views/VehicleForSale/Index.cshtml
@@ -1,10 +1,36 @@
 ﻿@model Vehicle
 
+@{
+    Layout = "~/Views/Shared/_VehicleForSaleLayout.cshtml";
+}
+
 <div class="container" style="margin-top:50px">
     <div class="row">
-        <div class="col-sm-12" style="background-color:green; margin-bottom:50px; padding:100px">
-            <h1>CAROUSELL</h1>
+        <!-- Carousel: -->
+        <div class="col-sm-12" style="margin-bottom:20px">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner" style="width:100%">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="~/images/vehicle_images/BMW_TTT777/8b72f98c-b1e0-4dac-8455-08742117fde9_bmw_front.jpg" alt="IMG_NOT_FOUND">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="~/images/vehicle_images/BMW_TTT777/8cdf0c20-1bb9-4bb5-b086-a2bc048ae884_bmw_inside.jpg" alt="IMG_NOT_FOUND">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="~/images/vehicle_images/BMW_TTT777/f31db4e6-3676-4312-9c57-1776b19df9b5_BMW.jpg" alt="IMG_NOT_FOUND">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Föregående</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Nästa</span>
+                </a>
+            </div>
         </div>
+        <!-- Bilmärke: -->
         <div class="col-sm-12" style="background-color:yellow; margin-bottom:20px">
             <h1>BILMÄRKE (DB)</h1>
         </div>
