--- a/BolindersBil.Web/Views/VehicleForSale/Index.cshtml
+++ b/BolindersBil.Web/Views/VehicleForSale/Index.cshtml
@@ -11,7 +11,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner" style="width:100%">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="~/images/vehicle_images/Test_ABC123/1956d4bc-02be-4829-ab3e-22220c4f72f7_ABC123_test.jpg" alt="IMG_NOT_FOUND"/>">
+                        <img class="d-block w-100" src="~/images/vehicle_images/Test_ABC123/1956d4bc-02be-4829-ab3e-22220c4f72f7_ABC123_test.jpg" alt="IMG_NOT_FOUND">
                     </div>
                     @*<div class="carousel-item">
                         <img class="d-block w-100" src="~/images/vehicle_images/BMW_TTT777/8cdf0c20-1bb9-4bb5-b086-a2bc048ae884_bmw_inside.jpg" alt="IMG_NOT_FOUND">
@@ -31,18 +31,21 @@
             </div>
         </div>
 
-            <!-- Bilmärke: -->
-            <div class="col-sm-12" style="background-color:yellow; margin-bottom:20px">
-                <h1>BILMÄRKE</h1>
-            </div>
+        <!-- Bilmärke: -->
+        <div class="col-sm-12" style="background-color:yellow; margin-bottom:20px">
+            <h1>BILMÄRKE:</h1>
+        </div>
+        <div class="col-sm-12" style="background-color:green; margin-bottom:20px">
+            <h1>INFORMATION OM BILEN:</h1>
+        </div>
         <div class="col-sm-12" style="background-color:orange; margin-bottom:20px">
-            <h1>PRISKALKYL</h1>
+            <h1>PRISKALKYL:</h1>
         </div>
         <div class="col-sm-12" style="background-color:lightblue; margin-bottom:20px">
-            <h1>RELATERADE FORDON</h1>
+            <h1>RELATERADE FORDON:</h1>
         </div>
         <div class="col-sm-12" style="background-color:pink; margin-bottom:20px">
-            <h1>KONTAKTA SÄLJARE</h1>
+            <h1>KONTAKTA SÄLJARE:</h1>
         </div>
     </div>
     <div class="float-sm-right" style="margin-bottom:10px">
