--- a/BolindersBil.Web/Views/Vehicle/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/AddNewVehicle.cshtml
@@ -11,7 +11,7 @@
 <hr />
 
 <div>
-    <form asp-action="AddNewVehicle" method="post" enctype="multipart/form-data" class="form-horizontal">
+    <form asp-action="AddNewVehicle" id="addNewVehicleForm" enctype="multipart/form-data" class="form-horizontal">
 
         <div class="form-group">
             <label asp-for="RegNr" class="control-label col-sm-2"><strong>Registreringsnummer:</strong></label>
@@ -124,18 +124,10 @@
         <div class="form-group">
             <label asp-for="Used" class="control-label col-sm-2"><strong>Begagnad:</strong></label>
             <div class="col-sm-10">
-                <label class="check-inline"><input asp-for="Used" type="radio" name="radioOption" value="true">  Ja</label>
-                <label class="check-inline"><input asp-for="Used" type="radio" name="radioOption" value="false">  Nej</label>
+                <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="true">  Ja</label>&nbsp;&nbsp;
+                <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="false">  Nej</label>
             </div>
         </div>
-
-        @*<div class="form-group">
-                <label asp-for="Used" class="control-label col-sm-2"><strong>Begagnad:</strong></label>
-                <div class="col-sm-10">
-                    <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="true">  Ja</label>&nbsp;&nbsp;
-                    <label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="false">  Nej</label>
-                </div>
-            </div>*@
 
         <div class="form-group">
             <label asp-for="Office" class="control-label col-sm-2"><strong>Anläggning:</strong></label>
@@ -152,30 +144,27 @@
 
         @* TODO: fix so you can visually see the files you have uploaded. *@
         <div class="form-group">
-            <label asp-for="Images" class="control-label col-sm-2"><strong>Bilder:</strong></label>
+            <label for="images" class="control-label col-sm-2"><strong>Bilder:</strong></label>
             <div class="col-sm-4">
 
-                <div class="btn">
-                    <input asp-for="Images" type="file" name="uploadedImages" id="browseImages" onchange="myFunction()" class="form-control-file" multiple>
-                </div>
+                <input type="file" id="images" name="images" class="form-control-file" multiple style="display:none">
 
+                <button class="btn" id="selectFilesBtn">Välj filer</button>
 
-
-
-                <div id="demo" style="display:none;"></div>
+                <div class="form-group" id="filePreviews"></div>
 
 
 
 
 
-                <div id="imgPreview" class="img-thumbnail" style="display:none;">
-                    <img class="img-responsive" id="targetImg" style="height:100px; width:100%;" />
-                    <hr />
-                    <div class="caption">
-                        <a class="btn btn-sm btn-warning" onclick="ClearPreview()">Ta bort</a>
-                        <small><span id="description"></span></small>
-                    </div>
-                </div>
+                @*<div id="imgPreview" class="img-thumbnail" style="display:none;">
+                        <img class="img-responsive" id="targetImg" style="height:100px; width:100%;" />
+                        <hr />
+                        <div class="caption">
+                            <a class="btn btn-sm btn-warning" onclick="ClearPreview()">Ta bort</a>
+                            <small><span id="description"></span></small>
+                        </div>
+                    </div>*@
 
             </div>
 
@@ -211,96 +200,108 @@
 <script src="~/js/site.min.js"></script>
 <script>
 
-    function myFunction() {
-        var x = document.getElementById("browseImages");
-        var txt = "";
-        var myFilesArray = [];
-
-        if ('files' in x) {
-            for (var i = 0; i < x.files.length; i++) {
-                var file = x.files[i];
-                myFilesArray.push[file];
-
-                var size = ~~(file.size / 1024) + " KB";
-                
-                txt += "<div id='removeNumber'><br><strong>" + (i + 1) + ". File</strong></div>";
-                txt += "<div id='removeName'>name: " + file.name + "</div>";
-                txt += "<div id='removeSize'>size: " + size + "</div>";
-                txt += "<a class='btn btn-sm btn-warning' id='removeButton' onclick='ClearPreview()'>" + "Ta bort" + "</a><br>";
-
-            }
-        }
-        alert(myFilesArray);
-        document.getElementById("demo").innerHTML = txt;
-        $("#demo").show();
-    }
-
-    var ClearPreview = function () {
-        $("#removeNumber").remove();
-        $("#removeName").remove();
-        $("#removeSize").remove();
-        $("#removeButton").remove();
-    };
-
-
-
-    //var ReadImage = function (file) {
-    //    var reader = new FileReader;
-    //    var image = new Image;
-    //    reader.readAsDataURL(file);
-    //    reader.onload = function (_file) {
-    //        image.src = _file.target.result;
-    //        image.onload = function () {
-    //            txt += "<div><img scr='_file.target.result'></img></div>";
-    //        }
-    //    }
-    //};
 
 
 
 
 
 
-    //$(document).ready(function () {
-    //    $("#browseImages").change(function () {
-
-    //        var File = this.files;
 
 
-    //        for (var i = 0; i < File.length; i++)
-    //        {
-    //            if (File && File[i]) {
-    //                ReadImage(File[i]);
-    //            }
-    //        }
-    //        //if (File && File[0]) {
-    //        //    ReadImage(File[0]);
-    //        //}
-    //    });
-    //});
 
-    //var ReadImage = function (file) {
-    //    var reader = new FileReader;
-    //    var image = new Image;
-    //    reader.readAsDataURL(file);
-    //    reader.onload = function (_file) {
-    //        image.src = _file.target.result;
-    //        image.onload = function () {
-    //            var height = this.height;
-    //            var width = this.width;
-    //            var type = file.type;
-    //            // Changing the image from byte to kilobyte here.
-    //            var size = ~~(file.size / 1024) + "KB";
-    //            $("#targetImg").attr('src', _file.target.result);
-    //            $("#description").text("Size: " + size + ", " + height + " x " + width + ", " + type + "");
-    //            $("#imgPreview").show();
-    //        }
-    //    }
-    //};
 
-    //var ClearPreview = function () {
-    //    $("#browseImages").val('');
-    //    $("#description").text('');
-    //    $("#imgPreview").hide();
-    //};
+
+
+                //function myFunction() {
+                //    var x = document.getElementById("browseImages");
+                //    var txt = "";
+                //    var myFilesArray = [];
+
+                //    if ('files' in x) {
+                //        for (var i = 0; i < x.files.length; i++) {
+                //            var file = x.files[i];
+                //            myFilesArray.push[file];
+
+                //            var size = ~~(file.size / 1024) + " KB";
+
+                //            txt += "<div id='removeNumber'><br><strong>" + (i + 1) + ". File</strong></div>";
+                //            txt += "<div id='removeName'>name: " + file.name + "</div>";
+                //            txt += "<div id='removeSize'>size: " + size + "</div>";
+                //            txt += "<a class='btn btn-sm btn-warning' id='removeButton' onclick='ClearPreview()'>" + "Ta bort" + "</a><br>";
+
+                //        }
+                //    }
+                //    alert(myFilesArray);
+                //    document.getElementById("demo").innerHTML = txt;
+                //    $("#demo").show();
+                //}
+
+                //var ClearPreview = function () {
+                //    $("#removeNumber").remove();
+                //    $("#removeName").remove();
+                //    $("#removeSize").remove();
+                //    $("#removeButton").remove();
+                //};
+
+
+
+                //var ReadImage = function (file) {
+                //    var reader = new FileReader;
+                //    var image = new Image;
+                //    reader.readAsDataURL(file);
+                //    reader.onload = function (_file) {
+                //        image.src = _file.target.result;
+                //        image.onload = function () {
+                //            txt += "<div><img scr='_file.target.result'></img></div>";
+                //        }
+                //    }
+                //};
+
+
+
+
+
+
+                //$(document).ready(function () {
+                //    $("#browseImages").change(function () {
+
+                //        var File = this.files;
+
+
+                //        for (var i = 0; i < File.length; i++)
+                //        {
+                //            if (File && File[i]) {
+                //                ReadImage(File[i]);
+                //            }
+                //        }
+                //        //if (File && File[0]) {
+                //        //    ReadImage(File[0]);
+                //        //}
+                //    });
+                //});
+
+                //var ReadImage = function (file) {
+                //    var reader = new FileReader;
+                //    var image = new Image;
+                //    reader.readAsDataURL(file);
+                //    reader.onload = function (_file) {
+                //        image.src = _file.target.result;
+                //        image.onload = function () {
+                //            var height = this.height;
+                //            var width = this.width;
+                //            var type = file.type;
+                //            // Changing the image from byte to kilobyte here.
+                //            var size = ~~(file.size / 1024) + "KB";
+                //            $("#targetImg").attr('src', _file.target.result);
+                //            $("#description").text("Size: " + size + ", " + height + " x " + width + ", " + type + "");
+                //            $("#imgPreview").show();
+                //        }
+                //    }
+                //};
+
+                //var ClearPreview = function () {
+                //    $("#browseImages").val('');
+                //    $("#description").text('');
+                //    $("#imgPreview").hide();
+                //};
 </script>
