--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -107,95 +107,99 @@
 
 <!-- Footer -->
 <footer class="page-footer font-small mdb-color lighten-3 pt-4">
-
+    <h4 class="text-center">Auktoriserad återförsäljare av</h4>
+    <br />
     <!-- Footer Elements -->
     <div class="container">
-        <form asp-controller="Vehicle" asp-action="GetAllVehicles" method="get">
+        
             <!--Grid row-->
-            <div class="row">
+        <div class="row">
 
+           
                 <!--Grid column-->
-                <div class="col-lg-2 col-md-12 mb-5">
+            <div class="col-lg-2 col-md-12 mb-5">
 
-                    <!--Image-->
-                    <div class="view overlay z-depth-1-half">
-                        <img id="img_omg" src="~/Logo/Saab-logo-2002-640x550.jpg" class="img-fluid" alt="Responsive image">
-                        <a href="">
-                            <div class="mask rgba-white-light"></div>
-                        </a>
-                    </div>
-
+                
+                <!--Image-->
+                <div class="view overlay z-depth-1-half">
+                    <a asp-controller="Vehicle" asp-action="Logo">
+                        <img type="search" id="img_omg" src="~/Logo/Saab-logo-2002-640x550.jpg" class="img-fluid" alt="Responsive image">
+                    </a>
                 </div>
-                <!--Grid column-->
-                <!--Grid column-->
-                <div class="col-lg-2 col-md-6 mb-4">
+                
+            </div>
 
-                    <!--Image-->
-                    <div class="view overlay z-depth-1-half">
-                        <img id="img_omg" src="~/Logo/Porsche-emblem-1994-640x550.jpg" class="img-fluid" alt="Responsive image">
-                        <a href="">
-                            <div class="mask rgba-white-light"></div>
-                        </a>
-                    </div>
+         
+            <!--Grid column-->
+            <!--Grid column-->
+            <div class="col-lg-2 col-md-6 mb-4">
 
+                <!--Image-->
+                <div class="view overlay z-depth-1-half">
+                    <img id="img_omg" src="~/Logo/Porsche-emblem-1994-640x550.jpg" class="img-fluid" alt="Responsive image">
+                    <a href="" >
+                        <div class="mask rgba-white-light"></div>
+                    </a>
                 </div>
-                <!--Grid column-->
-                <!--Grid column-->
-                <div class="col-lg-2 col-md-6 mb-4">
-
-                    <!--Image-->
-                    <div class="view overlay z-depth-1-half">
-                        <img id="img_omg" src="~/Logo/BMW-logo-2000-2048x2048.png" class="img-fluid" alt="Responsive image">
-                        <a href="">
-                            <div class="mask rgba-white-light"></div>
-                        </a>
-                    </div>
-
-                </div>
-                <!--Grid column-->
-                <!--Grid column-->
-                <div class="col-lg-2 col-md-12 mb-4">
-
-                    <!--Image-->
-                    <div class="view overlay z-depth-1-half">
-                        <img id="img_omg" src="~/Logo/Renault-logo-2015-2048x2048.png" class="img-fluid" alt="Responsive image">
-                        <a href="">
-                            <div class="mask rgba-white-light"></div>
-                        </a>
-                    </div>
-
-                </div>
-                <!--Grid column-->
-                <!--Grid column-->
-                <div class="col-lg-2 col-md-6 mb-4">
-
-                    <!--Image-->
-                    <div class="view overlay z-depth-1-half">
-                        <img id="img_omg" src="~/Logo/Mini-logo-2001-1920x1080.png" class="img-fluid" alt="Responsive image">
-                        <a href="">
-                            <div class="mask rgba-white-light"></div>
-                        </a>
-                    </div>
-
-                </div>
-                <!--Grid column-->
-                <!--Grid column-->
-                <div class="col-lg-2 col-md-6 mb-4">
-
-                    <!--Image-->
-                    <div class="view overlay z-depth-1-half">
-                        <img id="img_omg" src="~/Logo/Mercedes-Benz-emblem-1926-640x550 (1).jpg" class="img-fluid" alt="Responsive image">
-                        <a href="">
-                            <div class="mask rgba-white-light"></div>
-                        </a>
-                    </div>
-
-                </div>
-                <!--Grid column-->
 
             </div>
+            <!--Grid column-->
+            <!--Grid column-->
+            <div class="col-lg-2 col-md-6 mb-4">
+
+                <!--Image-->
+                <div class="view overlay z-depth-1-half">
+                    <img id="img_omg" src="~/Logo/BMW-logo-2000-2048x2048.png" class="img-fluid" alt="Responsive image">
+                    <a href="">
+                        <div class="mask rgba-white-light"></div>
+                    </a>
+                </div>
+
+            </div>
+            <!--Grid column-->
+            <!--Grid column-->
+            <div class="col-lg-2 col-md-12 mb-4">
+
+                <!--Image-->
+                <div class="view overlay z-depth-1-half">
+                    <img id="img_omg" src="~/Logo/Renault-logo-2015-2048x2048.png" class="img-fluid" alt="Responsive image">
+                    <a href="">
+                        <div class="mask rgba-white-light"></div>
+                    </a>
+                </div>
+
+            </div>
+            <!--Grid column-->
+            <!--Grid column-->
+            <div class="col-lg-2 col-md-6 mb-4">
+
+                <!--Image-->
+                <div class="view overlay z-depth-1-half">
+                    <img id="img_omg" src="~/Logo/Mini-logo-2001-1920x1080.png" class="img-fluid" alt="Responsive image">
+                    <a href="">
+                        <div class="mask rgba-white-light"></div>
+                    </a>
+                </div>
+
+            </div>
+            <!--Grid column-->
+            <!--Grid column-->
+            <div class="col-lg-2 col-md-6 mb-4">
+
+                <!--Image-->
+                <div class="view overlay z-depth-1-half">
+                    <img id="img_omg" src="~/Logo/Mercedes-Benz-emblem-1926-640x550 (1).jpg" class="img-fluid" alt="Responsive image">
+                    <a href="">
+                        <div class="mask rgba-white-light"></div>
+                    </a>
+                </div>
+
+            </div>
+            <!--Grid column-->
+
+        </div>
             <!--Grid row-->
-        </form>
+       
     </div>
     <!-- Footer Elements -->
     <!-- Copyright -->
