--- a/BolindersBil.Web/Views/Vehicle/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/AddNewVehicle.cshtml
@@ -122,10 +122,18 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Used" class="control-label col-sm-2"><strong>Sälj som begagnad?:</strong></label>
+            @*<label asp-for="Used" class="control-label col-sm-2"><strong>Sälj som begagnad?:</strong></label>*@
             <div class="col-sm-10">
-                <label class="checkbox-inline"><strong>Sälj som begagnad?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Used" type="checkbox" value="true"></label>
+                <label class="checkbox-inline"><strong>Sälj som begagnad?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Used" type="checkbox" id="usedCheckbox" value="false"></label>
                 @*<label class="checkbox-inline"><input asp-for="Used" type="checkbox" value="false">  Nej</label>*@
+            </div>
+        </div>
+
+        <div class="form-group">
+            @*<label asp-for="Leasable" class="control-label col-sm-4"><strong>Leasbar för företag:</strong></label>*@
+            <div class="col-sm-10">
+                <label class="checkbox-inline"><strong>Leasbar för företag?:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<input asp-for="Leasable" type="checkbox" id="leasableCheckbox" value="false"></label>
+                @*<label class="checkbox-inline"><input asp-for="Leasable" type="checkbox" value="false">  Nej</label>*@
             </div>
         </div>
 
@@ -148,14 +156,6 @@
                 <input type="file" id="images" name="images" class="form-control-file" multiple style="display:none">
                 <button class="btn" id="selectFilesBtn">Välj filer</button>
                 <div class="form-group" id="filePreviews"></div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label asp-for="Leasable" class="control-label col-sm-4"><strong>Leasbar för företag:</strong></label>
-            <div class="col-sm-10">
-                <label class="checkbox-inline"><input asp-for="Leasable" type="checkbox" value="true">  Ja</label>&nbsp;&nbsp;
-                <label class="checkbox-inline"><input asp-for="Leasable" type="checkbox" value="false">  Nej</label>
             </div>
         </div>
 
@@ -193,7 +193,7 @@
     };
 
     $(document).ready(function () {
-
+        
         $('#selectFilesBtn').click(function (e) {
             e.preventDefault();
             $('#images').trigger('click');
@@ -203,6 +203,27 @@
             formUtils.removeImage($(this).index());
             $(this).remove();
         });
+
+
+        $(document).on('change', '#usedCheckbox', function () {
+            if ($(this).is(':checked')) {
+                $(this).attr('value', 'true');
+                //console.log($(this).val());
+            } else {
+                $(this).attr('value', 'false');
+                //console.log($(this).val());
+            }
+        });
+        $(document).on('change', '#leasableCheckbox', function () {
+            if ($(this).is(':checked')) {
+                $(this).attr('value', 'true');
+                //console.log($(this).val());
+            } else {
+                $(this).attr('value', 'false');
+                //console.log($(this).val());
+            }
+        });
+        
 
         if ($('#addNewVehicleForm').length > 0) {
             $("#images").on("change", function (event) {
@@ -224,6 +245,7 @@
                 $('#images').remove();
                 var formData = new FormData();
 
+                
                 $('#addNewVehicleForm textarea').each(function () {
                     formData.append($(this).attr('name'), $(this).val());
                 });
