--- a/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
+++ b/BolindersBil.Web/Views/Vehicle/Vehicle.cshtml
@@ -7,13 +7,16 @@
 <div class="container" style="margin-top:50px">
     <div class="row">
         <!-- Carousel: -->
-        <div class="col-sm-12" style="margin-bottom:20px">
+        <div class="col-sm-12" ">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <!-- Foreach that loops through all the images concerning the specific vehicleId: -->
                 <div class="carousel-inner" style="width:100%">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="~/images/vehicle_images/Test_ABC123/1956d4bc-02be-4829-ab3e-22220c4f72f7_ABC123_test.jpg" alt="IMG_NOT_FOUND">
-                    </div>
+                    @foreach (var img in Model.Vehicle.Images)
+                    {
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="@img.Path" alt="TEST" data-toggle="modal" data-target="#vehicleModal">
+                        </div>
+                    }
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -26,11 +29,20 @@
             </div>
         </div>
 
+        <div class="col-sm-12" style="background-color:white; margin-bottom:20px; padding:10px;">
+            <!-- TODO: Link img to Modal: -->
+            <div class="col-sm-12 col-lg-4 justify-content-sm-center" style="margin:0 auto;">
+                @foreach (var img in Model.Vehicle.Images)
+                {
+                    <img class="img-thumbnail" src="@img.Path" />
+                }
+            </div>
+        </div>
         <!-- Bilmärke: -->
         <div class="col-sm-12" style="background-color:white; margin-bottom:20px">
             <h1>@Model.Vehicle.Brand @Model.Vehicle.Model</h1>
         </div>
-        <div class="col-sm-12" style="background-color:lightgray; margin-bottom:20px; padding:10px;">
+        <div class="col-sm-12" style="background-color:lavender; margin-bottom:20px; padding:10px;">
             <h6>
                 <strong>Miltal: </strong>@Model.Vehicle.Kilometer <br />
                 <strong>Modellbeskrivning: </strong>@Model.Vehicle.ModelDescription <br />
@@ -43,11 +55,11 @@
                 <strong>Begagnad: </strong>@Model.Vehicle.Used <br />
                 <strong>Leasbar: </strong>@Model.Vehicle.Leasable <br />
                 <strong>Attribut: </strong>@Model.Vehicle.VehicleAttribute <br />
-                <strong>Annons tillagd: </strong>@Model.Vehicle.AddedDate <br />
-                <strong>Annons uppdaterad: </strong>@Model.Vehicle.UpdatedDate <br />
-                <strong>Kontakta säljare: </strong> <!-- TODO: Can't reach the office phonenumber! -->
+                @*<strong>Annons tillagd: </strong>@Model.Vehicle.AddedDate <br />
+                <strong>Annons uppdaterad: </strong>@Model.Vehicle.UpdatedDate <br />*@
+                <strong>Kontakta säljare: </strong> <a href="tel:+460 @Model.Vehicle.OfficeId.PhoneNumber">&#9742;</a>
             </h6>
-            <h1><strong>Pris: </strong>@Model.Vehicle.Price</h1>
+            <h1><strong>Pris (SEK): </strong>@Model.Vehicle.Price</h1>
         </div>
         <div class="col-sm-12" style="background-color:orange; margin-bottom:20px; padding:10px;">
             <h1>PRISKALKYL:</h1>
@@ -55,19 +67,32 @@
         <div class="col-sm-12" style="background-color:lightblue; margin-bottom:20px; padding:10px;">
             <h1>RELATERADE FORDON:</h1>
         </div>
-        <div class="col-sm-12" style="background-color:orange; margin-bottom:20px; padding:10px;">
-            <h1>PRISKALKYL:</h1>
-        </div>
         <div class="col-sm-12" style="background-color:white; margin-bottom:20px; padding:10px;">
             <!-- Back to the page that lists all the vehicles: -->
             <button type="button" class="btn btn-warning">Tillbaka</button>
             <div class="vehicleButtons" style="float:right">
-
                 <!-- This form and its button allows you to share the vehicle: -->
                 <input asp-for="Email" placeholder="Ange emailadress..." />
                 <a asp-controller="Mail" asp-action="SendMail" class="btn btn-info">Dela</a>
             </div>
         </div>
+
+        <!-- CrarouselModal: -->
+        <div class="modal fade" id="vehicleModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" title="Close"> <span class="glyphicon glyphicon-remove"></span></button>
+                    </div>
+                    <div class="modal-body">
+                        <!--CAROUSEL CODE GOES HERE-->
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-danger" type="button" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
-
